@@ -2,6 +2,7 @@ package io.github.enzopavani.libraryapi.controller;
 
 import io.github.enzopavani.libraryapi.controller.dto.AutorDTO;
 import io.github.enzopavani.libraryapi.controller.dto.ErroResposta;
+import io.github.enzopavani.libraryapi.controller.mappers.AutorMapper;
 import io.github.enzopavani.libraryapi.exceptions.OperacaoNaoPermitidaException;
 import io.github.enzopavani.libraryapi.exceptions.RegistroDuplicadoException;
 import io.github.enzopavani.libraryapi.model.Autor;
@@ -24,17 +25,18 @@ import java.util.stream.Collectors;
 public class AutorController {
 
     private final AutorService service;
+    private final AutorMapper mapper;
 
     @PostMapping
-    public ResponseEntity<Object> salvar(@RequestBody @Valid AutorDTO autor) {
+    public ResponseEntity<Object> salvar(@RequestBody @Valid AutorDTO dto) {
         try {
-            Autor autorEntidade = autor.mapearParaAutor();
-            service.salvar(autorEntidade);
+            Autor autor = mapper.toEntity(dto);
+            service.salvar(autor);
 
             URI location = ServletUriComponentsBuilder
                     .fromCurrentRequest()
                     .path("/{id}")
-                    .buildAndExpand(autorEntidade.getId())
+                    .buildAndExpand(autor.getId())
                     .toUri();
 
             return ResponseEntity.created(location).build();
@@ -47,17 +49,13 @@ public class AutorController {
     @GetMapping("/{id}")
     public ResponseEntity<AutorDTO> obterDetalhes(@PathVariable String id) {
         var idAutor = UUID.fromString(id);
-        Optional<Autor> autorOptional = service.obterPorId(idAutor);
-        if(autorOptional.isPresent()) {
-            Autor autor = autorOptional.get();
-            AutorDTO dto = new AutorDTO(
-                    autor.getId(),
-                    autor.getNome(),
-                    autor.getDataNascimento(),
-                    autor.getNacionalidade());
-            return ResponseEntity.ok(dto);
-        }
-        return ResponseEntity.notFound().build();
+
+        return service
+                .obterPorId(idAutor)
+                .map(autor -> {
+                    AutorDTO dto = mapper.toDTO(autor);
+                    return ResponseEntity.ok(dto);
+                }).orElseGet( () -> ResponseEntity.notFound().build());
     }
 
     @DeleteMapping("/{id}")
@@ -81,13 +79,10 @@ public class AutorController {
             @RequestParam(value="nome", required=false) String nome,
             @RequestParam(value="nacionalidade", required=false) String nacionalidade) {
         List<Autor> resultado = service.pesquisaByExample(nome, nacionalidade);
-        List<AutorDTO> lista = resultado.stream().map(
-                autor -> new AutorDTO(
-                        autor.getId(),
-                        autor.getNome(),
-                        autor.getDataNascimento(),
-                        autor.getNacionalidade())
-                ).collect(Collectors.toList());
+        List<AutorDTO> lista = resultado.stream()
+                .map(mapper::toDTO)
+                .toList();
+
         return ResponseEntity.ok(lista);
     }
 
